added testing with mocking for service. changes to pom to silence warnings